# python-uv-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  TEMPLATE_SETUP.md  create_sample_pdf.py  pyproject.toml
chroma_db/: chroma.sqlite3
chroma_persist/: chroma.sqlite3
chunks/: 2021-17-1-0003966 - _BROU_2022_PsuD_reconsideracion_sf_atento_003.txt  2021-17-1-0003966 - _BROU_2022_PsuD_reconsideracion_sf_considerando_002.txt  2021-17-1-0003966 - _BROU_2022_PsuD_reconsideracion_sf_resultando_001.txt  2021-17-1-0003966 - _BROU_2022_PsuD_reconsideracion_sf_visto_000.txt  2021-17-1-0003971_BROU_Curial_no_levanta_obs_atento_003.txt  2021-17-1-0003971_BROU_Curial_no_levanta_obs_considerando_002.txt  2021-17-1-0003971_BROU_Curial_no_levanta_obs_resultando_001.txt  2021-17-1-0003971_BROU_Curial_no_levanta_obs_visto_000.txt  2024-17-1-0002161_MEC_CND_Convenio_FIDAE__Observa_CND__atento_003.txt  2024-17-1-0002161_MEC_CND_Convenio_FIDAE__Observa_CND__considerando_002.txt  2024-17-1-0002161_MEC_CND_Convenio_FIDAE__Observa_CND__resultando_001.txt  2024-17-1-0002161_MEC_CND_Convenio_FIDAE__Observa_CND__visto_000.txt  2024-17-1-0003968_MRREE_reconsideración_convenio_CND____25_atento_003.txt  2024-17-1-0003968_MRREE_reconsideración_convenio_CND____25_considerando_002.txt  2024-17-1-0003968_MRREE_reconsideración_convenio_CND____25_resultando_001.txt  2024-17-1-0003968_MRREE_reconsideración_convenio_CND____25_visto_000.txt  2024-17-1-0004093_Presidencia_SINAE_CND_servicio_sanitario_en_rutas_atento_003.txt  2024-17-1-0004093_Presidencia_SINAE_CND_servicio_sanitario_en_rutas_considerando_002.txt  2024-17-1-0004093_Presidencia_SINAE_CND_servicio_sanitario_en_rutas_resultando_001.txt  2024-17-1-0004093_Presidencia_SINAE_CND_servicio_sanitario_en_rutas_visto_000.txt  2024-17-1-0004839_BHU_CND_reiteración_mantiene_IB_atento_003.txt  2024-17-1-0004839_BHU_CND_reiteración_mantiene_IB_considerando_002.txt  2024-17-1-0004839_BHU_CND_reiteración_mantiene_IB_resultando_001.txt  2024-17-1-0004839_BHU_CND_reiteración_mantiene_IB_visto_000.txt  2025-17-1-0001522_BHU_reforma_sistema_electrico_CND_Reiteracion_Mantiene_mayo_25 (1) (1)_atento_003.txt  2025-17-1-0001522_BHU_reforma_sistema_electrico_CND_Reiteracion_Mantiene_mayo_25 (1) (1)_considerando_002.txt  2025-17-1-0001522_BHU_reforma_sistema_electrico_CND_Reiteracion_Mantiene_mayo_25 (1) (1)_resultando_001.txt  2025-17-1-0001522_BHU_reforma_sistema_electrico_CND_Reiteracion_Mantiene_mayo_25 (1) (1)_visto_000.txt  2025-17-1-0001705-_BROU_reconsideración_curial_Silvia_Romero_levanta_obs_atento_003.txt  2025-17-1-0001705-_BROU_reconsideración_curial_Silvia_Romero_levanta_obs_considerando_002.txt  2025-17-1-0001705-_BROU_reconsideración_curial_Silvia_Romero_levanta_obs_resultando_001.txt  2025-17-1-0001705-_BROU_reconsideración_curial_Silvia_Romero_levanta_obs_visto_000.txt  2025-17-1-0001706_-_BROU_reconsideración_curiales_levanta_correg_CORR_AA_atento_003.txt  2025-17-1-0001706_-_BROU_reconsideración_curiales_levanta_correg_CORR_AA_considerando_002.txt  2025-17-1-0001706_-_BROU_reconsideración_curiales_levanta_correg_CORR_AA_resultando_001.txt  2025-17-1-0001706_-_BROU_reconsideración_curiales_levanta_correg_CORR_AA_visto_000.txt  2025-17-1-0001790_Convenio_de_cooperación-MA_con_CND_-_observada (1)_atento_003.txt  2025-17-1-0001790_Convenio_de_cooperación-MA_con_CND_-_observada (1)_considerando_002.txt  2025-17-1-0001790_Convenio_de_cooperación-MA_con_CND_-_observada (1)_considerando_004.txt  2025-17-1-0001790_Convenio_de_cooperación-MA_con_CND_-_observada (1)_resultando_001.txt  (+17 more)
deploy/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh
eval/: uru_qa_dataset.jsonl
extracted_text/: 2021-17-1-0003966 - _BROU_2022_PsuD_reconsideracion_sf.txt  2021-17-1-0003971_BROU_Curial_no_levanta_obs.txt  2024-17-1-0002161_MEC_CND_Convenio_FIDAE__Observa_CND_.txt  2024-17-1-0004093_Presidencia_SINAE_CND_servicio_sanitario_en_rutas.txt  2025-17-1-0001522_BHU_reforma_sistema_electrico_CND_Reiteracion_Mantiene_mayo_25 (1) (1).txt  2025-17-1-0001705-_BROU_reconsideración_curial_Silvia_Romero_levanta_obs.txt  2025-17-1-0001706_-_BROU_reconsideración_curiales_levanta_correg_CORR_AA.txt  2025-17-1-0001790_Convenio_de_cooperación-MA_con_CND_-_observada (1).txt  2025-17-1-0003564_MEC_CND_Convenio_FIDAE_2025_agosto_25 (1).txt  Expediente-2022-17-1-0004672 (1).txt  Expediente-2024-17-1-0001154.txt
tests/: __init__.py  test_main.py
tools/: run_eval_langsmith.py  seed_langsmith_dataset.py
(+12 files in other folders)
